GNOME Bugzilla – Bug 778160
raw-load: Miscellaneous fixes and improvements
Last modified: 2017-02-07 09:43:29 UTC
The libraw-based RAW loader has various small bugs and has some room for improvement.
Created attachment 344896 [details] [review] operations/external/raw-load: Use a named constant, not a magic number
Created attachment 344897 [details] [review] operations/external/raw-load: Say NO to OOM safety
Created attachment 344898 [details] [review] operations/external/raw-load: Remove redundant code
Created attachment 344899 [details] [review] operations/external/raw-load: Set user_data as soon as it is allocated
Created attachment 344900 [details] [review] operations/external/raw-load: Reinitialize libraw upon path change
Created attachment 344901 [details] [review] operations/external/raw-load: Be more assertive about what we expect
Created attachment 344941 [details] [review] operations/external/raw-load: Remove redundant code
Created attachment 344951 [details] [review] operations/external/raw-load: Don't leak the cached path