operations/external/raw-load: Use a named constant, not a magic number

https://bugzilla.gnome.org/show_bug.cgi?id=778160